// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error handling logs errors by default 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Error when applying scrubber 'faultyScrubber' to field 'target'",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`error handling logs errors by default 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      [Error: ops],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`scrubs different types of data 1`] = `
Array [
  Object {
    "array": Array [
      1,
      2,
      Object {
        "pw": "notsecret",
      },
    ],
    "date": Object {},
    "function": [Function],
    "map": Map {
      "b" => "c",
    },
    "null": null,
    "set": Set {
      1,
      2,
      3,
      4,
    },
    "symbol": Symbol(42),
    "undefined": undefined,
  },
]
`;
